--- a/Vux/package.json
+++ b/Vux/package.json
@@ -11,7 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vux": "^2.2.0",
+    "vux": "2.9.2",
     "fastclick": "^1.0.6",
     "vuex-i18n": "^1.3.1",
     "vuex": "^2.1.1",
