--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.DS_Store
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
 .idea
-**/**/node_modules
-**/**/.cache
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
